--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,7 +5,6 @@ $w-color: #fff
 $dop-color: rgba(255, 255, 255, .3)
 $text-color: rgba(#000, 0.9)
 
-
 // CUSTOM SCROLL
 ::-webkit-scrollbar
   width: 0
@@ -27,11 +26,13 @@ $text-color: rgba(#000, 0.9)
   padding: 0
   box-sizing: border-box
   font-family: RobotoSlabBold
+
 a
   list-style: none
   text-decoration: none
   color: inherit
   font-family: Comfort
+
 h1
   font-size: 32px
   margin-top: 100px
@@ -39,6 +40,7 @@ h1
   span
     color: $ac-color2
     font-family: RobotoSlabBold
+
 h2
   font-size: 48px
   color: $ac-color
@@ -51,20 +53,25 @@ h2
   span
     color: $ac-color2
     font-family: RobotoSlabBold
+
 p
   font-family: Comfort
 
 .mt2
   margin-top: 20px
+
 .posr
   position: relative
+
 .carouseItemBox
   height: 100vh
+
 #home
   height: 100vh
   width: 100vw
   overflow: hidden
   font-weight: 100
+
 nav
   position: fixed
   border-radius: 0 50% 50% 0
@@ -74,8 +81,9 @@ nav
   height: 100%
   width: auto
   display: flex
-  justify-content: flex-end
-  align-items: center
+  //align-items: center
+  flex-direction: column
+  justify-content: center
   opacity: 0
   background-color: rgba(255, 255, 255, 0.16)
   color: $w-color
@@ -83,20 +91,9 @@ nav
   &.active
     opacity: 1
     left: 0
-.phone
-  position: relative
-  display: block !important
-  top: 2px
-.nav
-  list-style: none
-  display: flex
-  align-items: center
-  flex-direction: column
-  width: 100%
   .item.active
     background-color: $ac-color
   .item
-    left: -50px
     padding: 18px 45px 15px 35px
     line-height: 0.8
     text-transform: uppercase
@@ -116,22 +113,32 @@ nav
       height: 100%
       transition: 0.15s ease-in-out
       background-color: $ac-color
-      box-shadow: inset 0 0 3px rgba(0, 0, 0,.2)
+      box-shadow: inset 0 0 3px rgba(0, 0, 0, .2)
     &:hover
       color: #fff
       &:after
         width: 100%
-    //&:hover
-    //  color: $ac-color
+
+.phone
+  position: relative
+  display: block !important
+  top: 2px
+
+.nav
+  list-style: none
+  width: 100%
+
 .logoNav
   padding-bottom: 20px
   position: relative
   svg
     height: 35px
+
 .cont
   height: 100%
   max-width: 1170px
   margin: 0 auto
+
 .one, .two, .three
   display: flex
   align-items: center
@@ -141,9 +148,11 @@ nav
   position: relative
   width: 100vw
   height: 100vh
+
 .bgBottom
   background-color: #fafafa
   position: relative
+
 .clipBgBottom
   width: 100%
   height: 100%
@@ -154,6 +163,7 @@ nav
 
 .one
   background-color: #fafafa
+
 .navScroll
   position: fixed
   top: 0
@@ -173,11 +183,13 @@ nav
     width: 100%
     background-color: $w-color
     transition: 0.5s ease-in-out
+
 .scrollBox
   font-size: 0
   > div
     font-size: 18px
     display: flex
+
 .absolutNavRight
   position: absolute
   content: ''
@@ -186,13 +198,14 @@ nav
   height: 2px
   width: 20px
   background-color: red
+
 .rightDotsBox
   height: 100%
   box-shadow: inset 0 0 3px rgba(#000, 0.1)
   position: relative
   background-color: rgba(#000, .1)
   overflow: hidden
-  //transform: translateY(33.3%);
+//transform: translateY(33.3%);
 .rightDotsAbs
   background-color: $ac-color
   position: absolute
@@ -216,8 +229,10 @@ nav
   overflow: hidden
   height: 100vh
   display: inline-block
+
 .carouselItem.active
   z-index: 2
+
 .carouselItem
   width: 100vw
   position: absolute
@@ -230,6 +245,7 @@ nav
     object-fit: cover
     width: 100vw
     height: 100vh
+
 .carouselDots
   z-index: 12
   position: absolute
@@ -237,6 +253,7 @@ nav
   left: 50%
   transform: translateX(-50%)
   display: flex
+
 .carouselDotItem
   &.active
     div
@@ -252,6 +269,7 @@ nav
   &:hover
     div
       background-color: rgba(#fff, 0.6)
+
 .carouselText
   padding-bottom: 100px
   position: absolute
@@ -263,7 +281,7 @@ nav
   //padding-left: 15%
   flex-direction: column
   justify-content: center
-  background: rgba(0,0,0,.8)
+  background: rgba(0, 0, 0, .8)
   p
     position: relative
     opacity: 0
@@ -271,6 +289,7 @@ nav
     padding: 0
     text-shadow: 0 1px 3px rgba(#000, 0.4)
     color: #fff
+
 .linkTo
   position: relative
   z-index: -1
@@ -281,6 +300,7 @@ nav
   margin-top: 80px
   background-color: $ac-color
   color: $w-color
+
 .carouseItemBox
   img
     position: absolute
@@ -288,18 +308,20 @@ nav
     left: 50%
     transform: translateX(-50%)
     z-index: -1
+
 .carouselItem.active .carouselText
-    h2
-      position: relative
-      z-index: 2
-      animation: animationHeaderText 0.5s cubic-bezier(0,.73,.47,1) 1s forwards
-    p
-      z-index: 2
-      animation: animationHeaderBText 0.5s cubic-bezier(0,.73,.47,1) 1.5s forwards
-    a
-      animation: animationLink 0.5s cubic-bezier(0,.73,.47,1) 2s forwards
-      &:hover
-        animation: animationLink 0.5s cubic-bezier(0,.73,.47,1) 2s forwards, hoverAnimation 0.5s ease-in-out forwards
+  h2
+    position: relative
+    z-index: 2
+    animation: animationHeaderText 0.5s cubic-bezier(0, .73, .47, 1) 1s forwards
+  p
+    z-index: 2
+    animation: animationHeaderBText 0.5s cubic-bezier(0, .73, .47, 1) 1.5s forwards
+  a
+    animation: animationLink 0.5s cubic-bezier(0, .73, .47, 1) 2s forwards
+    &:hover
+      animation: animationLink 0.5s cubic-bezier(0, .73, .47, 1) 2s forwards, hoverAnimation 0.5s ease-in-out forwards
+
 @keyframes animationHeaderText
   0%
     top: -100px
@@ -341,6 +363,7 @@ nav
 // HAMBURGER
 input
   display: none
+
 label
   display: block
   cursor: pointer
@@ -360,12 +383,14 @@ label
     stroke-dasharray: var(--length) var(--total-length)
     stroke-dashoffset: var(--offset)
     transition: all .8s cubic-bezier(.645, .045, .355, 1)
-.cross input:checked+svg
+
+.cross input:checked + svg
   .line--1,
   .line--3
     --length: 22.62741699
   .line--2
     --length: 0
+
 .menu--1
   position: fixed
   top: 0
@@ -378,7 +403,7 @@ label
     --total-length: 126.64183044433594
   .line--2
     --total-length: 70
-  input:checked+svg
+  input:checked + svg
     .line--1,
     .line--3
       --offset: -94.1149185097
@@ -412,6 +437,7 @@ label
     opacity: 1
   50%, 100%
     opacity: 0
+
 @keyframes arrow2
   0%, 35%
     opacity: 0
@@ -419,6 +445,7 @@ label
     opacity: 1
   45%, 100%
     opacity: 0
+
 @keyframes arrow3
   0%, 50%
     opacity: 0
@@ -426,12 +453,14 @@ label
     opacity: 1
   65%, 100%
     opacity: 0
+
 .linkHome
   display: flex
   align-items: center
   a
     display: flex
     align-items: center
+
 .svgInst, .svgVk
   margin-left: 10px
   fill: $ac-color
@@ -440,8 +469,10 @@ label
   &:hover
     path
       animation: instAnim 0.5s ease-in-out
+
 .svgInst
   margin-left: 20px
+
 @keyframes instAnim
   0%
     fill: $ac-color
@@ -449,7 +480,6 @@ label
     fill: $w-color
   100%
     fill: $ac-color
-
 
 // PHOTO
 
@@ -469,7 +499,7 @@ label
       overflow: hidden
       position: relative
       .contentPhoto
-        background-color: rgba(0,0,0,0)
+        background-color: rgba(0, 0, 0, 0)
         transition: 1s ease
         position: absolute
         top: 0
@@ -511,11 +541,12 @@ label
           width: 100%
           height: 100%
           z-index: 2
-          background-color: rgba(0,0,0,.8)
+          background-color: rgba(0, 0, 0, .8)
           .contentPhotoBody
             //opacity: 1
             //top: 0
             animation: pAnimationPhoto 0.5s ease-in 1s forwards
+
 @keyframes pAnimationPhoto
   0%
     right: -300px
@@ -523,6 +554,7 @@ label
   100%
     right: 0
     opacity: 1
+
 @keyframes photoBodyCenter
   0%
     top: -200px
@@ -530,6 +562,7 @@ label
   100%
     top: 0
     opacity: 1
+
 @keyframes photoBodyRight
   0%
     left: -300px
@@ -537,6 +570,7 @@ label
   100%
     left: 0
     opacity: 1
+
 .pricePhoto
   margin-top: 5px
   color: $ac-color
@@ -547,6 +581,7 @@ label
     color: $w-color
     font-family: Comfort
     font-size: 18px
+
 .showPhoto
   margin-top: 80px
   opacity: 1
@@ -557,7 +592,7 @@ label
   font-family: Comfort
   border-radius: 5px
   &:hover
-    animation: hoverAnimation2 0.5s cubic-bezier(0,.73,.47,1) forwards
+    animation: hoverAnimation2 0.5s cubic-bezier(0, .73, .47, 1) forwards
 
 .default
   clip-path: polygon(0 100%, 16.5% 100%, 16.5% 0, 0 0)
@@ -572,6 +607,7 @@ label
         background-color: rgba(12, 13, 25, 0.8) !important
     img
       transform: translateX(-30%)
+
 .premium
   clip-path: polygon(33.3% 100%, 66.6% 100%, 66.6% 0, 33.3% 0)
   &.active
@@ -592,7 +628,7 @@ label
 .gold
   clip-path: polygon(83.25% 100%, 100% 100%, 100% 0, 83.25% 0)
   h2
-    margin-left: 70px
+    margin-left: 265px
   .contentPhotoBody
     margin-left: 41%
   img
@@ -605,6 +641,7 @@ label
         background-color: rgba(30, 0, 2, 0.9) !important
     img
       transform: translateX(30%) !important
+
 .arrowBoxPhoto
   position: absolute
   width: 100%
@@ -613,8 +650,9 @@ label
   > div
     position: relative
     width: 100%
+
 .arrowLeftLeft, .arrowLeft, .arrowRightRight, .arrowRight
-  text-shadow: 0 0 8px rgba(0,0,0,.2)
+  text-shadow: 0 0 8px rgba(0, 0, 0, .2)
   z-index: 1
   opacity: 0
   transition: 0.5s ease
@@ -625,38 +663,46 @@ label
   &.active
     opacity: 1
     z-index: 3
+
 .arrowLeftLeft
   left: 200px
+
 .arrowLeft
   left: 500px
+
 .arrowRightRight
   right: 200px
+
 .arrowRight
   right: 500px
+
 .streetPhoto
   background-color: #000
+
 .photoBox
   //display: flex
   //flex-wrap: wrap
   column-gap: 2.5px
   column-count: 5
+  overflow: hidden
   .item
     max-width: 100%
-    border-bottom: 3px solid #000
-    height: calc(100% / 5 - 5px)
+    //border-bottom: 3px solid #000
+    //height: calc(100% / 5 - 5px)
     width: 100%
     overflow: hidden
     cursor: zoom-in
+    position: relative
+    transition: 0.3s ease-out
+    &:hover
+      img
+        transform: scale(0.9)
     img
       width: 100%
-      transform: scale(1.1)
       object-fit: cover
       height: 100%
       transition: 0.5s ease
-      &:hover
-        transform: scale(1.04)
 
-      //max-width: calc(100% / 5)
 .streetPhoto
   .title
     opacity: 1
@@ -664,6 +710,7 @@ label
     color: #fff
     text-align: center
     margin: 0 auto
+
 .modalPhoto
   display: flex
   align-items: center
@@ -675,7 +722,7 @@ label
   bottom: 0
   width: 100%
   height: 100%
-  background-color: rgba(0,0,0,0)
+  background-color: rgba(0, 0, 0, 0)
   transition: 0.3s ease
   cursor: zoom-out
   img
@@ -683,16 +730,18 @@ label
     height: 30%
     opacity: 0
   &.show
-    background-color: rgba(0,0,0,0.9)
+    background-color: rgba(0, 0, 0, 0.9)
     z-index: 9
     img
       opacity: 1
       height: 90%
+
 .modalImgBox
   width: 100%
   height: 100%
+
 .dark
-  background-color: rgba(0,0,0,.9)
+  background-color: rgba(0, 0, 0, .9)
 
 // TRAINING
 .trainingGrid
@@ -721,7 +770,8 @@ label
       text-align: center
       width: 100%
   .bgImage
-    background: linear-gradient( rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74) ), url('../img/training/1.jpg') no-repeat center
+    background: linear-gradient(rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74)), url('../img/training/1.jpg') no-repeat center
+
 .b
   grid-area: b
   > .title
@@ -735,6 +785,7 @@ label
       font-size: 18px !important
   .bgImage
     background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/7.jpg') no-repeat center
+
 .c
   grid-area: c
   > .title
@@ -746,6 +797,7 @@ label
     left: -100%
   .bgImage
     background: linear-gradient(rgba(179, 173, 0, 0.74), rgba(179, 173, 0, 0.74)), url('../img/training/4.jpg') no-repeat center
+
 .d
   > .title
     animation: animD 3s ease-out
@@ -755,8 +807,9 @@ label
   .extraText
     bottom: -100%
   .bgImage
-    background:  linear-gradient(rgba(113, 42, 152, 0.74), rgba(123, 40, 169, 0.74)), url('../img/4.jpg') no-repeat center
+    background: linear-gradient(rgba(113, 42, 152, 0.74), rgba(123, 40, 169, 0.74)), url('../img/4.jpg') no-repeat center
   grid-area: d
+
 .e
   > .title
     animation: animE 3s ease-out
@@ -767,7 +820,8 @@ label
     left: -100%
   grid-area: e
   .bgImage
-    background:  linear-gradient( rgba(255, 126, 39, 0.88), rgba(255, 126, 39, 0.88) ), url('../img/training/2.jpg') no-repeat center
+    background: linear-gradient(rgba(255, 126, 39, 0.88), rgba(255, 126, 39, 0.88)), url('../img/training/2.jpg') no-repeat center
+
 .l
   > .title
     animation: animL 3s ease-out
@@ -778,7 +832,8 @@ label
     top: -100%
   grid-area: l
   .bgImage
-    background:  linear-gradient( rgba(224, 0, 137, 0.74), rgba(224, 0, 137, 0.74) ), url('../img/training/2.jpg') no-repeat center
+    background: linear-gradient(rgba(224, 0, 137, 0.74), rgba(224, 0, 137, 0.74)), url('../img/training/2.jpg') no-repeat center
+
 .k
   grid-area: k
   > .title
@@ -792,7 +847,8 @@ label
       text-align: left !important
       font-size: 18px !important
   .bgImage
-    background:  linear-gradient( rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74) ), url('../img/training/6.jpg') no-repeat center
+    background: linear-gradient(rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74)), url('../img/training/6.jpg') no-repeat center
+
 .m
   > .title
     animation: animM 3s ease-out
@@ -803,7 +859,8 @@ label
   .extraText
     left: -100%
   .bgImage
-    background:  linear-gradient( rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74) ), url('../img/training/8.jpg') no-repeat center
+    background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/8.jpg') no-repeat center
+
 @keyframes animA
   0%
     opacity: 0
@@ -811,6 +868,7 @@ label
   12.5%, 100%
     opacity: 1
     left: 0
+
 @keyframes animB
   0%,
   12.5%
@@ -819,6 +877,7 @@ label
   23%, 100%
     opacity: 1
     top: 0
+
 @keyframes animC
   0%, 23%
     opacity: 0
@@ -826,6 +885,7 @@ label
   35.5%, 100%
     opacity: 1
     top: 0
+
 @keyframes animD
   0%, 35.5%
     opacity: 0
@@ -833,6 +893,7 @@ label
   48%, 100%
     opacity: 1
     bottom: 0
+
 @keyframes animE
   0%, 48%
     opacity: 0
@@ -840,6 +901,7 @@ label
   60.5%, 100%
     opacity: 1
     top: 0
+
 @keyframes animL
   0%, 60.5%
     opacity: 0
@@ -847,6 +909,7 @@ label
   72.5%, 100%
     opacity: 1
     top: 0
+
 @keyframes animK
   0%, 72.5%
     opacity: 0
@@ -854,6 +917,7 @@ label
   85%, 100%
     opacity: 1
     bottom: 0
+
 @keyframes animM
   0%, 85%
     opacity: 0
@@ -861,7 +925,6 @@ label
   100%
     opacity: 1
     left: 0
-
 
 .a, .b, .c, .d, .e, .l, .k, .m
   position: relative
@@ -878,7 +941,7 @@ label
     color: #000
     height: 100%
     transition: 0.3s ease
-    background-color: rgba(255,255,255,1)
+    background-color: rgba(255, 255, 255, 1)
     padding: 30px
     .showPhoto
       color: #fff
@@ -913,6 +976,7 @@ label
     align-items: center
     justify-content: center
     font-size: 55px
+
 .bgImage
   position: absolute
   transition: 0.5s ease
@@ -929,6 +993,7 @@ label
 .training
   h2
     font-family: MerriweatherBold
+
 .trainingContent
   background-color: #ffffff
   margin-bottom: 30px
@@ -948,12 +1013,15 @@ label
     color: $ac-color2
     span
       color: $ac-color
+
 .ta-r
   text-align: right
+
 .textAccent
   font-family: MerriweatherBold
   margin-bottom: 30px
   font-size: 24px
+
 .progressBar
   width: 100%
   height: 5px
@@ -961,13 +1029,16 @@ label
   position: fixed
   z-index: 11
   top: 0
+
 .progressBG
   height: 100%
   width: 0
   background-color: $ac-color
+
 .training
   .progressBar
     background: #fff
+
 .canvasBox
   position: absolute
   top: 0
@@ -975,14 +1046,17 @@ label
   width: 100%
   height: 100%
   z-index: 2
+
 .trainingBigBox
   display: flex
   justify-content: space-between
   margin-bottom: 100px
+
 .svgFilter
   max-height: 0
+
 .trainingPhoto
-  max-width:  400px
+  max-width: 400px
   height: 400px
   border-radius: 50%
   overflow: hidden
@@ -994,6 +1068,7 @@ label
     width: 100%
     height: 100%
     object-fit: cover
+
 .preim
   list-style: none
   filter: url("#shadowed-goo")
@@ -1020,6 +1095,7 @@ label
       height: 20px
       border-radius: 50%
       background-color: $ac-color3
+
 .preim.left
   display: flex
   flex-direction: column
@@ -1027,8 +1103,10 @@ label
 
 .photoScrollBottom
   display: none
+
 .arrowToTop.show
   bottom: 30px
+
 .arrowToTop
   position: fixed
   bottom: -100px
@@ -1038,7 +1116,7 @@ label
   height: 50px
   z-index: 11
   border-radius: 30px
-  background-color: rgba(0,0,0,0.1)
+  background-color: rgba(0, 0, 0, 0.1)
   cursor: pointer
   &:after
     content: ''
@@ -1050,9 +1128,9 @@ label
     width: 30px
     background-color: $ac-color
     clip-path: polygon(85% 100%, 50% 60%, 15% 100%, 0 85%, 50% 30%, 100% 85%)
-    //border: 15px solid transparent
-    //box-sizing: border-box
-    //border-bottom: 20px solid $ac-color
+//border: 15px solid transparent
+//box-sizing: border-box
+//border-bottom: 20px solid $ac-color
 .trainingPrice
   background-color: #fff
   position: relative
@@ -1110,7 +1188,7 @@ label
           background-color: $ac-color2
           color: $w-color
       .front, .back
-       box-shadow: -1px 1px 3px rgba(0,0,0,.2), -3px 14px 18px rgba(0,0,0,0.1)
+        box-shadow: -1px 1px 3px rgba(0, 0, 0, .2), -3px 14px 18px rgba(0, 0, 0, 0.1)
     &.my
       transform: rotate(10deg)
       min-height: 300px
@@ -1121,16 +1199,16 @@ label
           background-color: gold
           color: $w-color
       .front, .back
-        box-shadow: 1px 1px 3px rgba(0,0,0,.2), 3px 14px 18px rgba(0,0,0,0.1)
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, .2), 3px 14px 18px rgba(0, 0, 0, 0.1)
     .front, .back
-      box-shadow: 0 1px 3px rgba(0,0,0,.2), 0 14px 18px rgba(0,0,0,0.1)
+      box-shadow: 0 1px 3px rgba(0, 0, 0, .2), 0 14px 18px rgba(0, 0, 0, 0.1)
       overflow: hidden
       border-radius: 5px
       .text
         padding: 0 25px
         margin-bottom: 10px
       .title
-        text-shadow: 0px 1px 0px rgba(0,0,0,0.2)
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2)
         padding: 30px 0 40px
         width: 100%
         clip-path: url(#clipTitle)
@@ -1169,8 +1247,10 @@ label
           display: block
           font-size: 24px
           color: $ac-color
+
 #Слой_1
   height: 0
+
 .absoluteDescription
   display: none
   color: #000
@@ -1181,21 +1261,25 @@ label
   font-size: 14px
   left: 50%
   transform: translateX(-50%)
+
 @keyframes cardHover
   0%
     transform: rotateY(0) skew(0)
   100%
     transform: rotateY(180deg) scale(1) skew(30deg)
+
 @keyframes cardOut
   0%
     transform: rotateY(180deg) scale(1) skew(30deg)
   100%
     transform: rotateY(0) skew(0)
+
 @keyframes cardBackHover
   0%
     transform: rotateY(180deg) scale(1) skew(-30deg)
   100%
     transform: rotateY(360deg) skew(0)
+
 @keyframes cardBackOut
   0%
     transform: rotateY(360deg) skew(0)
@@ -1205,6 +1289,7 @@ label
 .clipPathCard
   height: 0px
   width: 0
+
 .container
   max-width: 1170px
   margin: 0 auto
