--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,22 +3,22 @@ $ac-color2: #fd5829
 $ac-color3: #fdd3f0
 $w-color: #fff
 $dop-color: rgba(255, 255, 255, .3)
-$text-color: rgba(#000, 0.9)
+$text-color: rgba(0,0,0, 0.9)
 
 // CUSTOM SCROLL
 ::-webkit-scrollbar
   width: 0
 //  height: 0
 ///* Track */
-//::-webkit-scrollbar-track
+//:: -webkit-scrollbar-track
 //  background: #000
 //
 ///* Handle */
-//::-webkit-scrollbar-thumb
+//:: -webkit-scrollbar-thumb
 //  background: $ac-color
 //
 ///* Handle on hover */
-//::-webkit-scrollbar-thumb:hover
+//:: -webkit-scrollbar-thumb:hover
 //  background: $ac-color
 
 *
@@ -37,6 +37,7 @@ h1
   font-size: 32px
   margin-top: 100px
   text-transform: uppercase
+
   span
     color: $ac-color2
     font-family: RobotoSlabBold
@@ -50,6 +51,7 @@ h2
   margin-bottom: 20px
   font-family: RobotoSlab
   text-transform: uppercase
+
   span
     color: $ac-color2
     font-family: RobotoSlabBold
@@ -74,50 +76,52 @@ p
 
 nav
   position: fixed
-  border-radius: 0 50% 50% 0
   overflow: hidden
-  left: -200px
+  left: 0px
+  padding: 0px 25px 0 100px
+  top: 13px
   z-index: 10
-  height: 100%
+  border-radius: 0 25px 25px 0
   width: auto
   display: flex
   //align-items: center
-  flex-direction: column
   justify-content: center
   opacity: 0
-  background-color: rgba(255, 255, 255, 0.16)
+  background: rgba(0, 0, 0, .6)
   color: $w-color
-  transition: 0.3s ease-in-out
+  transition: 0.15s ease-in-out
+
   &.active
     opacity: 1
-    left: 0
+
+    .item
+      opacity: 1
+      top: 0
+
   .item.active
-    background-color: $ac-color
+    color: $ac-color
+
   .item
-    padding: 18px 45px 15px 35px
+    padding: 18px 25px 15px 25px
     line-height: 0.8
     text-transform: uppercase
     font-size: 14px
     position: relative
-    //transition: border 0.15s ease-in-out
-    width: 100%
+    transition: 0.15s ease-in-out
     cursor: pointer
+    position: relative
     z-index: 2
-    &:after
-      position: absolute
-      content: ''
-      bottom: 0
-      left: 0
-      width: 0
-      z-index: -1
-      height: 100%
-      transition: 0.15s ease-in-out
-      background-color: $ac-color
-      box-shadow: inset 0 0 3px rgba(0, 0, 0, .2)
+    top: -15px
+    opacity: 0
+
+    &:nth-child(2)
+      transition: 0.15s ease-in-out 0.10s
+
+    &:nth-child(3)
+      transition: 0.15s ease-in-out 0.20s
+
     &:hover
-      color: #fff
-      &:after
-        width: 100%
+      opacity: 1
 
 .phone
   position: relative
@@ -131,6 +135,7 @@ nav
 .logoNav
   padding-bottom: 20px
   position: relative
+
   svg
     height: 35px
 
@@ -169,16 +174,17 @@ nav
   top: 0
   right: 0
   width: 3px
-  /* transform: translateY(-50%); */
   display: flex
   flex-direction: column
   cursor: pointer
   z-index: 10
   height: 100vh
+
   .scrollClick.active
     position: relative
     //font-size: 18px
     background-color: $ac-color
+
   .scrollClick
     width: 100%
     background-color: $w-color
@@ -186,6 +192,7 @@ nav
 
 .scrollBox
   font-size: 0
+
   > div
     font-size: 18px
     display: flex
@@ -241,6 +248,7 @@ nav
   //opacity: 0
   &:nth-child(3)
     z-index: 1
+
   > img
     object-fit: cover
     width: 100vw
@@ -258,6 +266,7 @@ nav
   &.active
     div
       background-color: #fff
+
   > div
     box-shadow: 0 0 3px rgba(#000, 0.5)
     width: 10px
@@ -266,6 +275,7 @@ nav
     background-color: rgba(#fff, 0.3)
     cursor: pointer
     margin: 5px
+
   &:hover
     div
       background-color: rgba(#fff, 0.6)
@@ -282,6 +292,7 @@ nav
   flex-direction: column
   justify-content: center
   background: rgba(0, 0, 0, .8)
+
   p
     position: relative
     opacity: 0
@@ -314,11 +325,14 @@ nav
     position: relative
     z-index: 2
     animation: animationHeaderText 0.5s cubic-bezier(0, .73, .47, 1) 1s forwards
+
   p
     z-index: 2
     animation: animationHeaderBText 0.5s cubic-bezier(0, .73, .47, 1) 1.5s forwards
+
   a
     animation: animationLink 0.5s cubic-bezier(0, .73, .47, 1) 2s forwards
+
     &:hover
       animation: animationLink 0.5s cubic-bezier(0, .73, .47, 1) 2s forwards, hoverAnimation 0.5s ease-in-out forwards
 
@@ -372,7 +386,8 @@ label
   height: 100%
   top: -5px
   z-index: 12
-  path
+
+  svg > path
     fill: none
     stroke: $ac-color
     stroke-width: 3
@@ -382,14 +397,16 @@ label
     --offset: -38
     stroke-dasharray: var(--length) var(--total-length)
     stroke-dashoffset: var(--offset)
-    transition: all .8s cubic-bezier(.645, .045, .355, 1)
+    transition: all .5s cubic-bezier(.645, .045, .355, 1)
 
 .cross input:checked + svg
   .line--1,
   .line--3
     --length: 22.62741699
+
   .line--2
     --length: 0
+    width: 123
 
 .menu--1
   position: fixed
@@ -398,15 +415,19 @@ label
   left: 0
   width: 80px
   height: 80px
+
   .line--1,
   .line--3
     --total-length: 126.64183044433594
+
   .line--2
     --total-length: 70
+
   input:checked + svg
     .line--1,
     .line--3
       --offset: -94.1149185097
+
     .line--2
       --offset: -50
 
@@ -423,10 +444,13 @@ label
   stroke: $ac-color
   fill: transparent
   stroke-width: 5px
+
   &:first-child
     animation: arrow1 2s infinite
+
   &:nth-child(2)
     animation: arrow2 2s infinite
+
   &:last-child
     animation: arrow3 2s infinite
 
@@ -457,6 +481,7 @@ label
 .linkHome
   display: flex
   align-items: center
+
   a
     display: flex
     align-items: center
@@ -464,11 +489,13 @@ label
 .svgInst, .svgVk
   margin-left: 10px
   fill: $ac-color
+
   path
-    stroke-width: 3
+  stroke-width: 3
+
   &:hover
     path
-      animation: instAnim 0.5s ease-in-out
+    animation: instAnim 0.5s ease-in-out
 
 .svgInst
   margin-left: 20px
@@ -495,9 +522,11 @@ label
     top: 0
     left: 0
     transition: 1s ease
+
     .smallBox
       overflow: hidden
       position: relative
+
       .contentPhoto
         background-color: rgba(0, 0, 0, 0)
         transition: 1s ease
@@ -507,6 +536,7 @@ label
         width: 100%
         height: 100%
         z-index: 2
+
         h2
           opacity: 1
           margin-top: 100px
@@ -515,6 +545,7 @@ label
           max-width: none
           text-align: center
           color: #ffffff
+
         .contentPhotoBody
           transition: 0.5s ease 1s
           max-width: 1000px
@@ -522,18 +553,24 @@ label
           color: #fff
           opacity: 0
           right: -300px
+
           p
             margin-bottom: 20px
+
             .accentP
               color: $ac-color
               font-size: 24px
+
     img
       transition: 0.5s ease
       transform: translateX(-50%)
+
     &.active
       z-index: 2
+
       .smallBox
         position: relative
+
         .contentPhoto
           position: absolute
           top: 0
@@ -542,6 +579,7 @@ label
           height: 100%
           z-index: 2
           background-color: rgba(0, 0, 0, .8)
+
           .contentPhotoBody
             //opacity: 1
             //top: 0
@@ -575,8 +613,10 @@ label
   margin-top: 5px
   color: $ac-color
   font-size: 30px
+
   &:nth-child(4)
     margin-top: 80px
+
   span
     color: $w-color
     font-family: Comfort
@@ -591,54 +631,69 @@ label
   background-color: $ac-color2
   font-family: Comfort
   border-radius: 5px
+
   &:hover
     animation: hoverAnimation2 0.5s cubic-bezier(0, .73, .47, 1) forwards
 
 .default
   clip-path: polygon(0 100%, 16.5% 100%, 16.5% 0, 0 0)
+
   h2
     margin-left: -335px
+
   .contentPhotoBody
     margin-left: 4.5%
     text-align: right
+
   &.active
     .smallBox
       .contentPhoto
         background-color: rgba(12, 13, 25, 0.8) !important
+
     img
       transform: translateX(-30%)
 
 .premium
   clip-path: polygon(33.3% 100%, 66.6% 100%, 66.6% 0, 33.3% 0)
+
   &.active
     //.smallBox
     //  .contentPhoto
     .contentPhotoBody
       animation: photoBodyCenter 0.5s ease 1s forwards !important
+
   .contentPhotoBody
     margin: 0 auto
     right: 0 !important
     text-align: center
+
     .pricePhoto
       &:nth-child(3)
         margin-top: 80px
+
       &:nth-child(4)
         margin-top: auto
 
 .gold
   clip-path: polygon(83.25% 100%, 100% 100%, 100% 0, 83.25% 0)
+
   h2
     margin-left: 265px
+
   .contentPhotoBody
     margin-left: 41%
+
   img
     transform: translateX(50%) !important
+
   &.active
     .contentPhotoBody
       animation: photoBodyRight 0.5s ease 1s forwards !important
+
     .smallBox
       .contentPhoto
         background-color: rgba(30, 0, 2, 0.9) !important
+
     img
       transform: translateX(30%) !important
 
@@ -647,6 +702,7 @@ label
   width: 100%
   height: 0
   top: 90%
+
   > div
     position: relative
     width: 100%
@@ -660,6 +716,7 @@ label
   color: #fff
   transform: translateY(-50%)
   position: absolute
+
   &.active
     opacity: 1
     z-index: 3
@@ -685,18 +742,21 @@ label
   column-gap: 2.5px
   column-count: 5
   overflow: hidden
+
   .item
     max-width: 100%
     //border-bottom: 3px solid #000
-    //height: calc(100% / 5 - 5px)
+    //height: calc(100% / 5 -5px)
     width: 100%
     overflow: hidden
     cursor: zoom-in
     position: relative
     transition: 0.3s ease-out
+
     &:hover
       img
         transform: scale(0.9)
+
     img
       width: 100%
       object-fit: cover
@@ -725,13 +785,16 @@ label
   background-color: rgba(0, 0, 0, 0)
   transition: 0.3s ease
   cursor: zoom-out
+
   img
     transition: 0.3s ease
     height: 30%
     opacity: 0
+
   &.show
     background-color: rgba(0, 0, 0, 0.9)
     z-index: 9
+
     img
       opacity: 1
       height: 90%
@@ -757,107 +820,142 @@ label
   height: calc(100vh - 5px)
 
 .a
+  grid-area: a
   > .title
     animation: animA 3s ease-out
+
   &:hover
     .extraText
       left: 0
-  grid-area: a
+      grid-area: a
+
   .extraText
     left: -100%
     bottom: 0
+
     .title
       text-align: center
       width: 100%
+
   .bgImage
     background: linear-gradient(rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74)), url('../img/training/1.jpg') no-repeat center
 
 .b
   grid-area: b
+
   > .title
     animation: animB 3s ease-out
+
   &:hover
     .extraText
       top: 0
+
   .extraText
     top: -100%
+
     .title
       font-size: 18px !important
+
   .bgImage
     background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/7.jpg') no-repeat center
 
 .c
   grid-area: c
+
   > .title
     animation: animC 3s ease-out
+
   &:hover
     .extraText
       left: 0
+
   .extraText
     left: -100%
+
   .bgImage
     background: linear-gradient(rgba(179, 173, 0, 0.74), rgba(179, 173, 0, 0.74)), url('../img/training/4.jpg') no-repeat center
 
 .d
+  grid-area: d
   > .title
     animation: animD 3s ease-out
+
   &:hover
     .extraText
       bottom: 0
+
   .extraText
     bottom: -100%
+
   .bgImage
     background: linear-gradient(rgba(113, 42, 152, 0.74), rgba(123, 40, 169, 0.74)), url('../img/4.jpg') no-repeat center
-  grid-area: d
+    grid-area: d
 
 .e
+  grid-area: e
   > .title
     animation: animE 3s ease-out
+
   &:hover
     .extraText
       left: 0
+
   .extraText
     left: -100%
-  grid-area: e
+    grid-area: e
+
   .bgImage
     background: linear-gradient(rgba(255, 126, 39, 0.88), rgba(255, 126, 39, 0.88)), url('../img/training/2.jpg') no-repeat center
 
 .l
+  grid-area: l
   > .title
     animation: animL 3s ease-out
+
   &:hover
     .extraText
       top: 0
+
   .extraText
     top: -100%
-  grid-area: l
+    grid-area: l
+
   .bgImage
     background: linear-gradient(rgba(224, 0, 137, 0.74), rgba(224, 0, 137, 0.74)), url('../img/training/2.jpg') no-repeat center
 
 .k
   grid-area: k
+
   > .title
     animation: animK 3s ease-out
+
   &:hover
     .extraText
       bottom: 0
+
   .extraText
     bottom: -100%
+
     .title
       text-align: left !important
       font-size: 18px !important
+
   .bgImage
     background: linear-gradient(rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74)), url('../img/training/6.jpg') no-repeat center
 
 .m
+  grid-area: m
   > .title
     animation: animM 3s ease-out
-  grid-area: m
+    grid-area: m
+
   &:hover
     .extraText
       left: 0
+
   .extraText
     left: -100%
+
   .bgImage
     background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/8.jpg') no-repeat center
 
@@ -929,6 +1027,7 @@ label
 .a, .b, .c, .d, .e, .l, .k, .m
   position: relative
   overflow: hidden
+
   .extraText
     position: absolute
     display: flex
@@ -943,26 +1042,34 @@ label
     transition: 0.3s ease
     background-color: rgba(255, 255, 255, 1)
     padding: 30px
+
     .showPhoto
       color: #fff
       margin: 20px 0
+
     .title
       font-family: MerriweatherBold
       text-transform: uppercase
       margin-top: 0
       color: $ac-color
       margin-bottom: 30px
+
     .text
       max-width: 500px
+
   &:hover
     > .title
       opacity: 0
+
     .extraText
       opacity: 1
+
     .bgImage
       transform: scale(1)
+
   .bgImage
     background-size: cover
+
   > .title
     position: relative
     font-family: MerriweatherBold
@@ -986,10 +1093,10 @@ label
   z-index: -1
   transform: scale(1.1)
   height: 100%
-//Lobster, Comfort, Marmelad - bottom te,
-//  Merriweather, MerriweatherBold - good,
-//  Pattaya, RobotoSlabBold - good, RobotoSlab,
-//  Rubik, Ruso - alay good, TenorSans, Yanone, YanoneBold, Yeseva - good
+//Lobster, Comfort, Marmelad -bottom te,
+//  Merriweather, MerriweatherBold -good,
+//  Pattaya, RobotoSlabBold -good, RobotoSlab,
+//  Rubik, Ruso -alay good, TenorSans, Yanone, YanoneBold, Yeseva -good
 .training
   h2
     font-family: MerriweatherBold
@@ -997,20 +1104,25 @@ label
 .trainingContent
   background-color: #ffffff
   margin-bottom: 30px
+
   p
     max-width: 600px
     margin-bottom: 50px
     line-height: 1.4
+
     span
       color: $ac-color2
       text-transform: uppercase
+
   .title.r
     text-align: right
+
   .title
     opacity: 1
     font-family: MerriweatherBold
     padding: 100px 0
     color: $ac-color2
+
     span
       color: $ac-color
 
@@ -1060,9 +1172,11 @@ label
   height: 400px
   border-radius: 50%
   overflow: hidden
+
   &:hover
     img
       transform: scale(1.05)
+
   img
     transition: 1s ease-out
     width: 100%
@@ -1072,6 +1186,7 @@ label
 .preim
   list-style: none
   filter: url("#shadowed-goo")
+
   li
     padding: 10px 15px
     background-color: $ac-color3
@@ -1081,10 +1196,12 @@ label
     color: $text-color
     border-radius: 20px
     position: relative
+
     &:hover
       div
         left: -50px
         width: 20px
+
     div
       transition: 0.3s ease-out
       position: absolute
@@ -1145,6 +1262,53 @@ label
     margin: 0 30px
     position: relative
     perspective: 1000px
+    .front, .back
+      box-shadow: 0 1px 3px rgba(0, 0, 0, .2), 0 14px 18px rgba(0, 0, 0, 0.1)
+      overflow: hidden
+      border-radius: 5px
+      padding: 0
+      position: absolute
+      width: 100%
+      height: 100%
+      left: 0
+      top: 0
+      display: flex
+      justify-content: flex-start
+      align-items: flex-start
+      flex-direction: column
+      transition: 0.5s
+      backface-visibility: hidden
+      .text
+        padding: 0 25px
+        margin-bottom: 10px
+      .title
+        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2)
+        padding: 30px 0 40px
+        width: 100%
+        clip-path: url(#clipTitle)
+        text-align: center
+        margin-bottom: 30px
+        font-size: 24px
+        text-transform: uppercase
+    .back
+      background-color: #000
+      transform: rotateY(180deg)
+      display: flex
+      align-items: center
+      justify-content: center
+      padding: 0 25px
+      div
+        flex-direction: column
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 30px
+        font-size: 14px
+        text-align: center
+        span
+          display: block
+          font-size: 24px
+          color: $ac-color
     .extraTitle
       font-size: 18px
       text-align: center
@@ -1172,7 +1336,6 @@ label
     &.pers
       top: -100px
       .front
-        //clip-path: url(#appleClip)
         color: $text-color
         background-color: #fff
         .title
@@ -1200,54 +1363,7 @@ label
           color: $w-color
       .front, .back
         box-shadow: 1px 1px 3px rgba(0, 0, 0, .2), 3px 14px 18px rgba(0, 0, 0, 0.1)
-    .front, .back
-      box-shadow: 0 1px 3px rgba(0, 0, 0, .2), 0 14px 18px rgba(0, 0, 0, 0.1)
-      overflow: hidden
-      border-radius: 5px
-      .text
-        padding: 0 25px
-        margin-bottom: 10px
-      .title
-        text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2)
-        padding: 30px 0 40px
-        width: 100%
-        clip-path: url(#clipTitle)
-        text-align: center
-        margin-bottom: 30px
-        font-size: 24px
-        text-transform: uppercase
-      padding: 0
-      position: absolute
-      width: 100%
-      height: 100%
-      left: 0
-      top: 0
-      display: flex
-      justify-content: flex-start
-      align-items: flex-start
-      flex-direction: column
-      transition: 0.5s
-      backface-visibility: hidden
-    .back
-      background-color: #000
-      transform: rotateY(180deg)
-      display: flex
-      align-items: center
-      justify-content: center
-      padding: 0 25px
-      div
-        flex-direction: column
-        display: flex
-        align-items: center
-        justify-content: center
-        margin-bottom: 30px
-        font-size: 14px
-        text-align: center
-        span
-          display: block
-          font-size: 24px
-          color: $ac-color
-
+    
 #Слой_1
   height: 0
 
